Configure Gargantua mode under Linux

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -55,6 +55,8 @@ jobs:
       - name: Configure (Linux/MacOS)
         if: runner.os != 'Windows'
         run: |
+          if [[ "${{matrix.index_size}}" == "Gargantua" ]]; \
+          then cp Makefile.inc.Gargantua Makefile.inc; fi
           ./configure.sh
           echo "platform="\
           `./configure.sh --show-platform`-${{ matrix.config }} >> $GITHUB_ENV
