Test string equality under Windows batch still complains ... Trying to put opening parenthesis on same line (who knows ...)

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -77,8 +77,8 @@ jobs:
       - name: Configure (Windows)
         if: runner.os == 'Windows'
         run: |
-          if "${{matrix.index_size}}" == "Gargantua" ^
-          (copy CMakeOptions.txt.gargantua CMakeOptions.txt)
+          if "${{matrix.index_size}}" == "Gargantua" (^
+          copy CMakeOptions.txt.gargantua CMakeOptions.txt )
           ./configure.bat
 
       - name: Build (Windows)
