Seems that what I read about caret (^) to continue command to next line under Windows batch instead of backquote was wrong. Switching back to backquote.

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -82,13 +82,13 @@ jobs:
       - name: Build (Windows)
         if: runner.os == 'Windows'
         run: |
-          cmake --build build/Windows --config ${{ matrix.config }} ^
+          cmake --build build/Windows --config ${{ matrix.config }} `
           | tee -filepath build_log.txt
 
       - name: Tests (Windows)
         if: runner.os == 'Windows'
         run: |
-          build/Windows/tests/runpybot.bat ^
+          build/Windows/tests/runpybot.bat `
           --config=${{ matrix.config }} --include=smoke tests/
 
 ##############################################################################
