Trying with ubuntu-latest (did not find emscripten package)

--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -10,9 +10,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04]
+        os: [ubuntu-latest]
         include:
-          - os: ubuntu-20.04
+          - os: ubuntu-latest
             name: Linux
     steps:
       - name: Checkout repository
