cmake: Add options for CMake/pkgconfig install destinations

--- a/src/lib/geogram/CMakeLists.txt
+++ b/src/lib/geogram/CMakeLists.txt
@@ -95,7 +95,7 @@ install(
 
 install(
         FILES "${PROJECT_BINARY_DIR}/geogram${VORPALINE_VERSION_MAJOR}.pc"
-        DESTINATION lib${LIB_SUFFIX}/pkgconfig
+        DESTINATION ${GEOGRAM_INSTALL_PKGCONFIG_DIR}
 )
 
 
