--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -28,6 +28,12 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Checkout exploragram
+        uses: actions/checkout@v3
+        with:
+          repository: BrunoLevy/exploragram
+          path: src/lib/exploragram
+
       - name: Checkout data
         uses: actions/checkout@v3
         with:
