New example program for auto-intersection.

--- a/src/examples/geogram/CMakeLists.txt
+++ b/src/examples/geogram/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(manifold_harmonics)
 add_subdirectory(opennl_basic_example)
 add_subdirectory(simple_raytrace)
 add_subdirectory(boolean_operations)
+add_subdirectory(intersect)
