basic example for facet picking mode

--- a/src/examples/graphics/CMakeLists.txt
+++ b/src/examples/graphics/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(demo_Evert)
 add_subdirectory(demo_Raytrace)
 add_subdirectory(demo_Application)
 add_subdirectory(demo_SimpleApplication)
+add_subdirectory(demo_Picking)
