--- a/src/tests/test_nn_search/CMakeLists.txt
+++ b/src/tests/test_nn_search/CMakeLists.txt
@@ -1,6 +1,6 @@
 aux_source_directories(SOURCES "" .)
 
-vor_reset_warning_level()
+# vor_reset_warning_level()
 aux_source_directories(SOURCES "" ./third_party/ANN)
 
 vor_add_executable(test_nn_search ${SOURCES})
