New geoCSG demo Keyboard file nav is now an option in SimpleMeshApplication

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(geodump)
 if(GEOGRAM_WITH_GRAPHICS)
   add_subdirectory(vorpaview)
   add_subdirectory(geobox)
+  add_subdirectory(geoCSG)
   if(GEOGRAM_WITH_LUA)  
      add_subdirectory(geocod)
   endif()   
