--- a/src/lib/geogram/CMakeLists.txt
+++ b/src/lib/geogram/CMakeLists.txt
@@ -47,6 +47,8 @@ include_directories(${PROJECT_BINARY_DIR}/src/lib)
 
 add_library(geogram ${SOURCES} $<TARGET_OBJECTS:geogram_third_party>)
 
+target_compile_features(geogram PUBLIC cxx_std_17)
+
 target_include_directories(geogram PRIVATE
     ${PROJECT_SOURCE_DIR}/src/lib/geogram/third_party/amgcl
 )
@@ -69,7 +71,7 @@ if(ANDROID)
     ${ANDROID_NDK}/sources/android/native_app_glue
   )
   message(STATUS "building for Android")
-endif()  
+endif()
 
 
 set_target_properties(geogram PROPERTIES
