--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -142,3 +142,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./reports/smoke
           destination_dir: reports/smoke
+          force_orphan: true
