--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -118,3 +118,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./reports/nightly
           destination_dir: reports/nightly
+          force_orphan: true
