Removed "force_orphan: true" flag for publish action (yes it clears history of generated pages as I wanted, but it also removes gh-pages content generated by other actions such as doxygen). TODO: find a way

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -118,4 +118,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./reports/nightly
           destination_dir: reports/nightly
-          force_orphan: true
+#         force_orphan: true  # to clean history of gh-pages branch
