Trying building emscripten version of geogram on ubuntu-24.04 instead of ubuntu-latest (that is not switched to 24.04 yet)

--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -10,9 +10,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-24.04]
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-24.04
             name: Linux
     steps:
       - name: Checkout repository
