Added test for geofile input/output with large file

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory(test_HLBFGS)
 add_subdirectory(test_RVC)
 add_subdirectory(test_logger)
 add_subdirectory(test_CDT_2d)
+add_subdirectory(test_geofile)
+
