Added test for syntaxic sugar mesh traversal

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -8,4 +8,5 @@ add_subdirectory(test_RVC)
 add_subdirectory(test_logger)
 add_subdirectory(test_CDT_2d)
 add_subdirectory(test_geofile)
+add_subdirectory(test_mesh_syntaxic_sugar)
 
