--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -115,7 +115,7 @@ jobs:
       - name: Publish reports on gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          external_repository: BrunoLevy/geogram.CI
           publish_dir: ./reports/nightly
           destination_dir: reports/nightly
-#         force_orphan: true  # to clean history of gh-pages branch
