removed force orphan flag (keep all logs, now that logs are no longer part of geogram repo, it is no longer a problem) I may need to add a "clean logs" action with manual trigger so that I can clean that from time to time (else geogram.CI's repo will become huge after a while)

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -143,4 +143,4 @@ jobs:
           external_repository: BrunoLevy/geogram.CI
           publish_dir: ./reports/smoke
           destination_dir: reports/smoke
-          force_orphan: true   # to clean history of gh-pages branch
+#         force_orphan: true   # to clean history of gh-pages branch
