Finally I am setting the force-orphan flag for the nighty build (it will remove the display of the latest smoke tests, but well, smoke tests take no longer than 10 min to generate, and I feel better not having a system that continuously makes the repo grow bigger and bigger)

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -119,3 +119,4 @@ jobs:
           external_repository: BrunoLevy/geogram.CI
           publish_dir: ./reports/nightly
           destination_dir: reports/nightly
+          force_orphan: true   # to clean history of gh-pages branch
