--- a/src/lib/geogram/geogram.pc.in
+++ b/src/lib/geogram/geogram.pc.in
@@ -6,8 +6,8 @@ libdir=${exec_prefix}/lib@LIB_SUFFIX@
 Name: geogram
 Description: fast, simple and easy-to-use primitives for geometric programming
 Version: @VORPALINE_VERSION@
-URL: http://alice.loria.fr/software/geogram
-Requires.private: 
+URL: https://github.com/BrunoLevy/geogram
+Requires.private:
 Libs: -L${libdir} -Wl,-rpath ${libdir} -lgeogram
-Libs.private: 
+Libs.private:
 Cflags: -I${includedir}
