WIP: making packager's life easier (#293)   Flags for linking dependencies if using system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,10 @@ else()
 project(Geogram VERSION "${VORPALINE_VERSION_PLAIN}")
 endif()
 
+if(GEOGRAM_FOR_DEBIAN)
+include_directories(SYSTEM /usr/include/lua5.4)
+endif()
+
 # Optional modules
 # (can be overriden in CMakeOptions.txt)
 
