--- a/src/lib/geogram/CMakeLists.txt
+++ b/src/lib/geogram/CMakeLists.txt
@@ -91,7 +91,11 @@ if(UNIX AND VORPALINE_BUILD_DYNAMIC)
 if (ANDROID)
 target_link_libraries(geogram dl)
 else()
-target_link_libraries(geogram pthread dl)
+  if(GEOGRAM_USE_BUILTIN_DEPS)
+      target_link_libraries(geogram pthread dl)
+  else()
+      target_link_libraries(geogram pthread dl lua5.4 z triangle Meshb.7)
+  endif()
 endif()
 endif()
 
