Linking rply when using system's lib (#293)

--- a/src/lib/geogram/CMakeLists.txt
+++ b/src/lib/geogram/CMakeLists.txt
@@ -94,7 +94,7 @@ else()
   if(GEOGRAM_USE_BUILTIN_DEPS)
       target_link_libraries(geogram pthread dl)
   else()
-      target_link_libraries(geogram pthread dl lua5.4 z triangle Meshb.7)
+      target_link_libraries(geogram pthread dl lua5.4 z triangle Meshb.7 rply)
   endif()
 endif()
 endif()
