More changes for #293: Simpler .pc files, removed path (already in standard location)

--- a/src/lib/geogram/geogram.pc.in
+++ b/src/lib/geogram/geogram.pc.in
@@ -1,13 +1,10 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 includedir=${prefix}/include/@VORPALINE_INCLUDE_SUBPATH@
-libdir=${exec_prefix}/lib@LIB_SUFFIX@
 
 Name: geogram
 Description: fast, simple and easy-to-use primitives for geometric programming
 Version: @VORPALINE_VERSION@
 URL: https://github.com/BrunoLevy/geogram
-Requires.private:
-Libs: -L${libdir} -Wl,-rpath ${libdir} -lgeogram
-Libs.private:
+Libs: -lgeogram
 Cflags: -I${includedir}
