--- a/src/lib/geogram_gfx/geogram_gfx.pc.in
+++ b/src/lib/geogram_gfx/geogram_gfx.pc.in
@@ -1,13 +1,10 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 includedir=${prefix}/include/@VORPALINE_INCLUDE_SUBPATH@
-libdir=${exec_prefix}/lib@LIB_SUFFIX@
 
 Name: geogram_gfx
 Description: Graphic rendering and GUI for geogram
 Version: @VORPALINE_VERSION@
 URL: https://github.com/BrunoLevy/geogram
-Requires.private:
-Libs: -L${libdir} -Wl,-rpath ${libdir} -lgeogram_gfx -lgeogram -l@GEO_GLFW3_LIBNAME@
-Libs.private:
+Libs: -lgeogram_gfx -lgeogram -l@GEO_GLFW3_LIBNAME@
 Cflags: -I${includedir}
