--- a/src/lib/geogram/CMakeLists.txt
+++ b/src/lib/geogram/CMakeLists.txt
@@ -26,7 +26,7 @@ aux_source_directories(SOURCES "Source Files\\delaunay" delaunay)
 aux_source_directories(SOURCES "Source Files\\voronoi"  voronoi)
 aux_source_directories(SOURCES "Source Files\\points"   points)
 aux_source_directories(SOURCES "Source Files\\api"      api)
-aux_source_directories(SOURCES "Source Files\\NL"       NL)
+#aux_source_directories(SOURCES "Source Files\\NL"       NL)
 aux_source_directories(SOURCES "Source Files\\image"    image)
 aux_source_directories(SOURCES "Source Files\\parameterization" parameterization)
 aux_source_directories(SOURCES "Source Files\\bibliography" bibliography)
