--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,10 @@ cmake_policy(SET CMP0048 NEW)
 
 
 ##############################################################################
-set(VORPALINE_VERSION_RC FALSE)
+set(VORPALINE_VERSION_RC TRUE)
 set(VORPALINE_VERSION_MAJOR 1)
 set(VORPALINE_VERSION_MINOR 9)
-set(VORPALINE_VERSION_PATCH 7)
+set(VORPALINE_VERSION_PATCH 8)
 
 set(VORPALINE_VERSION_PLAIN ${VORPALINE_VERSION_MAJOR}.${VORPALINE_VERSION_MINOR}.${VORPALINE_VERSION_PATCH})
 if(VORPALINE_VERSION_RC)
