--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_policy(SET CMP0048 NEW)
 
 
 ##############################################################################
-set(VORPALINE_VERSION_RC TRUE)
+set(VORPALINE_VERSION_RC FALSE)
 set(VORPALINE_VERSION_MAJOR 1)
 set(VORPALINE_VERSION_MINOR 9)
 set(VORPALINE_VERSION_PATCH 8)
