For #291: set soversion to major.minor.patch

--- a/src/lib/geogram/CMakeLists.txt
+++ b/src/lib/geogram/CMakeLists.txt
@@ -82,7 +82,7 @@ endif()
 
 set_target_properties(geogram PROPERTIES
 VERSION ${VORPALINE_VERSION}
-SOVERSION ${VORPALINE_VERSION_MAJOR}
+SOVERSION ${VORPALINE_VERSION_MAJOR}.${VORPALINE_VERSION_MINOR}.${VORPALINE_VERSION_PATCH}
 FOLDER "GEOGRAM")
 
 if(UNIX AND VORPALINE_BUILD_DYNAMIC)
