mesh_surface_intersection.cpp: comments geogram_gfx/CMakeLists.txt: fixing compilation for Emscripten #327

--- a/src/lib/geogram_gfx/CMakeLists.txt
+++ b/src/lib/geogram_gfx/CMakeLists.txt
@@ -44,7 +44,7 @@ if(NOT ANDROID)
 target_link_libraries(geogram_gfx glfw)
 endif()
 
-if(UNIX AND NOT APPLE)
+if(UNIX AND NOT APPLE AND NOT EMSCRIPTEN)
    find_package(X11 REQUIRED)
    target_link_libraries(geogram_gfx ${X11_LIBRARIES})
 endif()
